syntax = "proto3";

option go_package = "github.com/zachmandeville/tester-prototype/adapter/adapter";

package adapter;

message Endpoints {
  message Endpoint {
    string name = 1;
  }
  repeated Endpoint items = 1;
}

message Clusters {
  message Cluster {
    string name = 1;
    map<string,int32> connect_timeout = 2;
  }
  repeated Cluster items = 1;
}

message Routes {
  message Route {
    string name = 1;
  }
  repeated Route items = 1;
}

message Listeners {
  message Listener {
    string name = 1;
  }
  repeated Listener items = 1;
}

message Runtimes {
  message Runtime {
    string name = 1;
  }
  repeated Runtime items = 1;
}

message Secrets {
  message Secret {
    string name = 1;
  }
  repeated Secret items = 1;
}

message Snapshot {
  string node = 1;
  string version = 2;
  Endpoints endpoints = 3;
  Clusters clusters = 4;
  Routes routes = 5;
  Listeners listeners = 6;
  Runtimes runtimes = 7;
  Secrets secrets = 8;
}

message SetStateResponse {
  string message = 1;
}

message clearRequest {
  string node = 1;
}

message clearResponse {
  string response = 1;
}

service Adapter {
  rpc SetState(Snapshot) returns (SetStateResponse){}
  rpc ClearState(clearRequest) returns (clearResponse) {}
}
